--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,7 +33,7 @@ application.langs="zh"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=oracle.jdbc.driver.OracleDriver
+db.default.driver="oracle.jdbc.driver.OracleDriver"
 #db.default.url="jdbc:h2:mem:play"
 db.default.url="jdbc:oracle:thin:@192.168.1.202:1521:test"
 db.default.user="techsupport"
