修正数据库配置错误

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,25 +35,36 @@ application.langs="zh"
 #
 db.default.driver="oracle.jdbc.driver.OracleDriver"
 #db.default.url="jdbc:h2:mem:play"
-db.default.url="jdbc:oracle:thin:@192.168.1.202:1521:test"
+db.default.url="jdbc:oracle:thin:@192.168.1.225:1521:test"
 db.default.user="techsupport"
 db.default.password="techsupport"
+db.default.logStatements=true
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=ERROR
+logger.root=DEBUG
 
 # Logger used by the framework:
 logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+logger.scala.slick=DEBUG
+logger.scala.slick.session=DEBUG
+logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
+
+
+logger.java.sql=DEBUG
+logger.java.sql.Statement=DEBUG
+logger.java.sql.PreparedStatement=DEBUG
+logger.java.sql.ResultSet=DEBUG
 
