--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="zh"
 # By convention, the default datasource is named `default`
 #
 db.default.driver="oracle.jdbc.driver.OracleDriver"
-db.default.url="jdbc:oracle:thin:@192.168.1.225:1521:test"
-db.default.user="techsupport"
-db.default.password="techsupport"
+db.default.url="jdbc:oracle:thin:@192.168.1.202:1521:test"
+db.default.user="techsupportr"
+db.default.password="techsupportr"
 db.default.logStatements=true
 
 #mansys
@@ -64,7 +64,7 @@ evolutionplugin=disabled
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=DEBUG
+logger.root=INFO
 
 # Logger used by the framework:
 logger.play=INFO
