add slick support big update

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,6 +39,8 @@ db.default.user="techsupportr"
 db.default.password="techsupportr"
 db.default.logStatements=true
 
+
+//slick.default="models.systemmanage.Role,models.systemmanage.f"
 #mansys
 #db.mansys.driver="oracle.jdbc.driver.OracleDriver"
 #db.mansys.url="jdbc:oracle:thin:@192.168.1.225:1521:test"
